# course__airbyte__fraud_project

./: .gitignore  LICENSE  README.md  pyproject.toml  run-dbt.sh  run-soda.sh
configs/airbyte/: connections.yml
configs/snowflake/sql/prepare-env/: prepare-env.sql
dags/: customer_metrics.py
include/: s3-iam-policy.json
include/dbt/fraud/: profiles.yml
include/dbt/fraud/models/bronze/: sources.yml
include/dbt/fraud/models/bronze/raw__mysql/: labeled_transactions.sql
include/dbt/fraud/models/bronze/raw__postgres/: customer_transactions.sql
include/dbt/fraud/models/silver/: customer_metrics.sql
include/soda/: configuration.yml  helpers.py
include/soda/checks/tables/bronze/raw__mysql/: labeled_transactions.yml
